[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
exclude = [
  "example", # Example data and scripts
  "tests",   # Test files
  "docs",    # Documentation files
  ".github", # GitHub workflows, actions, etc.
]

name = "brainles_preprocessing"
version = "0.0.0"               # will be overwritten by poetry-dynamic-versioning but needs to be set
description = "Tool for preprocessing tasks in biomedical imaging, with a focus on (but not limited to) multi-modal brain MRI"
license = "Apache-2.0"

authors = [
  "Florian Kofler <florian.kofler@tum.de>",
  "Isra Mekki <isra.mekki@helmholtz-muenchen.de>",
  "Marcel Rosier <marcel.rosier@tum.de>",
]

maintainers = [
  "Florian Kofler <florian.kofler@tum.de>",
  "Isra Mekki <isra.mekki@helmholtz-muenchen.de>",
  "Marcel Rosier <marcel.rosier@tum.de>",
]

readme = "README.md"
repository = "https://github.com/BrainLesion/preprocessing"
#documentation = ""

keywords = [
  "brain tumor",
  "glioma",
  "BraTS",
  "skullstripping",
  "brain extraction",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
# core
path = "^16.10.0"
ttictoc = "^0.5.6"
pathlib = "^1.0.1"
nibabel = ">=3.2.1"
numpy = "^1.23.0"

# hd-bet reqs
brainles_hd_bet = ">=0.0.8"

# utils
tqdm = "^4.64.1"
auxiliary = ">=0.0.42"
rich = "^13.6.0"

# optional registration backends
antspyx = { version = "^0.4.2", optional = true }
ereg = { version = "^0.0.10", optional = true }


[tool.poetry.extras]
all = ["antspyx", "ereg"]
ants = ["antspyx"]
ereg = ["ereg"]


[tool.poetry.dev-dependencies]
pytest = ">=8.1.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = ">=7.0.0"
sphinx-copybutton = ">=0.5.2"
sphinx-rtd-theme = ">=1.3.0"
myst-parser = ">=2.0.0"
